fix: use Java 17 for module